<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="370dp"
        android:layout_height="575dp"
        android:background="@drawable/rounded_bg_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="352dp"
            android:layout_height="487dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_bg"
            android:padding="16dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="345dp"
            android:layout_height="47dp"
            android:layout_margin="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_bg"
            android:foregroundTint="#0057FF"
            android:queryHint="Search patients"
            app:layout_constraintEnd_toEndOf="@+id/recyclerView"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="@+id/recyclerView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="86dp"
        android:background="#DCE8FF"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:enabled="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/fileBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/file"
            android:enabled="false"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/file"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/staffBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:contentDescription="@string/staff"
            android:enabled="false"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/medical_records"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- SearchView for searching patients -->

    <!-- RecyclerView for displaying the list of patients -->

</androidx.constraintlayout.widget.ConstraintLayout>
