<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="88dp"
        android:background="#DCE8FF"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:enabled="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/fileBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/file"
            android:enabled="false"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/file"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/staffBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:contentDescription="@string/staff"
            android:enabled="false"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="389dp"
        android:layout_height="295dp"
        android:background="@drawable/rounded_bg"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ScrollView
            android:layout_width="333dp"
            android:layout_height="285dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/ptntsNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:fontFamily="@font/geologicaregular"
                    android:hint="Patient's Name"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/ptntsAddressTxt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:fontFamily="@font/geologicaregular"
                    android:hint="Patient's Address"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/ptntsPhoneTxt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:fontFamily="@font/geologicaregular"
                    android:hint="Patient's Phone Number"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/ptntsGender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:fontFamily="@font/geologicaregular"
                    android:hint="Gender"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/ptntsStatus"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:fontFamily="@font/geologicaregular"
                    android:hint="Marital Status"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/ptntsStatus2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:fontFamily="@font/geologicaregular"
                    android:hint="Vital signs"
                    android:inputType="text"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/dateBirth"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_bg_blue"
                    android:fontFamily="@font/geologicaregular"
                    android:gravity="center"
                    android:hint="Date of Birth"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dateCheckTxt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_bg_blue"
                    android:fontFamily="@font/geologicaregular"
                    android:gravity="center"
                    android:hint="Date of Check-up"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#FFFFFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/addFiles"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="#0064F7"
                    android:fontFamily="@font/geologicaregular"
                    android:text="Upload files"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/addPatient"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="#0064F7"
                    android:fontFamily="@font/geologicaregular"
                    android:text="@string/add_patient"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="387dp"
        android:layout_height="284dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_bg_blue"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt">

        <!-- ViewPager2 for Graphs -->

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="345dp"
            android:layout_height="273dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="163dp"
        android:layout_height="47dp"
        android:fontFamily="@font/geologicaregular"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
